--- a/sc - backend/src/main/resources/application.properties
+++ b/sc - backend/src/main/resources/application.properties
@@ -7,11 +7,14 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 spring.mail.host = smtp.sbb.rs
-spring.mail.username = sc2019@sbb.rs
-spring.mail.password = sc12345
+spring.mail.username = xmlws2018@sbb.rs
+spring.mail.password = Xmlws12345
 spring.mail.port=587
-spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
 server.port = 8090
 server.ssl.key-store=src/main/resources/keystore.p12
@@ -26,6 +29,7 @@ spring.data.pcc=https://localhost:8888
 spring.data.kp=https://localhost:8081
 spring.data.bank.a=https://localhost:8181
 spring.data.bank.b=https://localhost:8282
+spring.data.sc=https://localhost:8090
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
@@ -33,3 +37,8 @@ spring.servlet.multipart.max-request-size=10MB
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.properties.http.enabled=true
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
+
